--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -9,14 +9,38 @@
 </ng-container>
 
 <ng-container *ngIf="!addUserBtn">
+   <div class="row">
+       <div class="col-xs-3">
+        <mat-form-field class="example-form-field border-input p-l-20">
+          <input
+            matInput
+            placeholder="Search Users"
+            type="search"
+           (keyup)="applyFilter($event.target.value)"
+          />
+          <button mat-button matSuffix mat-icon-button>
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+      <div class="col-xs-9">
+           <div class="text-right add-user-details-button-right p-r-20">
+              <button mat-raised-button (click)="addUser()"
+                class="main-background-color main-button color-white">
+                Add User
+              </button>
+          </div>
+      </div>
+  </div>
+
    <div class="row" class="p-l-20 p-r-20 p-b-20 min-height parent">
-      <div class="text-right add-user-details-button-right">
+      <!-- <div class="text-right add-user-details-button-right">
         <button mat-raised-button (click)="addUser()"
           class="main-background-color main-button color-white">
           Add User
         </button>
-      </div>
-<ng-container *ngIf="dataSourceActivate.length > 0">
+      </div> -->
+<ng-container *ngIf="dataSourceActivateTemp.length > 0">
   <mat-expansion-panel class="myPanel" [expanded]="true">
     <mat-expansion-panel-header>
       <div class="row p-t-10 p-b-10">
@@ -105,7 +129,7 @@
 </ng-container>
 <p></p>
 
-<ng-container *ngIf="dataSourceDeactivate && dataSourceDeactivate.length > 0">
+<ng-container *ngIf="dataSourceDeactivateTemp && dataSourceDeactivateTemp.length > 0">
   <mat-expansion-panel  class="myPanel" [expanded]="true">
     <mat-expansion-panel-header>
       <div class="row p-t-10 p-b-10">
