--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -30,21 +30,30 @@
         </mat-card>
       </div>
     </div>
-    <div class="row">
-      <!-- <div class="col-xs-12 text-right rfq-create-btn">
-        <button mat-raised-button class="main-background-color main-button color-white m-b-5"
-          [routerLink]="['../../rfq/project-materials']">
-          Create RFQ
-        </button>
-      </div> -->
-      <div class="col-xs-12 text-right rfq-create-btn">
-        <button mat-raised-button class="main-background-color main-button color-white m-b-5"
+      <div class="row">
+       <div class="col-xs-3">
+        <mat-form-field class="example-form-field border-input p-l-20">
+          <input
+            matInput
+            placeholder="Search RFQ"
+            type="search"
+           (keyup)="applyFilter($event.target.value)"
+          />
+          <button mat-button matSuffix mat-icon-button>
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+      <div class="col-xs-9">
+           <div class="text-right add-user-details-button-right p-t-10 p-r-20">
+               <button mat-raised-button class="main-background-color main-button color-white m-b-5"
           [routerLink]="['../../rfq/createRfq']">
           Create RFQ
         </button>
+          </div>
       </div>
+  </div>
 
-    </div>
 
     <div class="rfq-list-detail-custom">
       <mat-accordion>
@@ -142,7 +151,7 @@
         </mat-expansion-panel>
       </mat-accordion>
       <br>
-      <mat-accordion *ngIf="closeRfqList">
+      <mat-accordion *ngIf="closeRfqListTemp">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
