--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -61,7 +61,7 @@
       <!-- Accordion/ Collapsible -->
       <mat-accordion>
         <!-- first Project -->
-        <ng-template ngFor let-project [ngForOf]="checkedMaterialsList" let-i="index">
+        <ng-template ngFor let-project [ngForOf]="checkedList" let-i="index">
           <mat-expansion-panel class="myPanel">
             <mat-expansion-panel-header>
               <mat-panel-title>
