--- a/src/app/features/rfq/create-rfq/create-rfq.component.html
+++ b/src/app/features/rfq/create-rfq/create-rfq.component.html
@@ -1,30 +1,29 @@
 <div class="page-start-point ">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent">
         <div class="row">
-            <div class="col-xs-6"> <button (click)="goBack(stepper)" type="button">Back</button></div>
-            <div class="col-xs-6">
-                <button (selectionChange)="selectionChange($event)" (click)="goForward(stepper)"
-                    type="button">Next</button>
+            <div class="col-xs-12 text-right">
+                <span class="p-r-5">
+                    <button mat-raised-button class="main-background-color main-button color-white"
+                        (click)="goBack(stepper)" type="button">Back</button>
+                </span>
+                <button mat-raised-button class="main-background-color main-button color-white"
+                    (selectionChange)="selectionChange($event)" (click)="goForward(stepper)" type="button">Next</button>
             </div>
         </div>
-        {{this.stepper.selectedIndex }}
-        <mat-horizontal-stepper (selectionChange)="selectionChange($event)" [linear]="true" #stepper
-            class="custom-stepper custom-header-height p-t-25">
+        <mat-horizontal-stepper (selectionChange)="selectionChange($event)" [linear]="true" #stepper>
             <mat-step stepControl="stepOne">
                 <ng-template matStepLabel>Project & Material</ng-template>
-                <app-rfq-project-materials [stepperForm]="stpForm" #projectrMaterial [existingRfq]="rfqData"
-                    (selectedMaterial)="getMaterial($event)">
+                <app-rfq-project-materials [stepperForm]="stpForm" #projectrMaterial [existingRfq]="rfqData">
                 </app-rfq-project-materials>
             </mat-step>
             <mat-step stepControl="stepSecond">
                 <ng-template matStepLabel>Add Quantity & Makes</ng-template>
-                <app-rfq-quantity-makes *ngIf="currentIndex===1" [stepperForm]="stpForm" [rfq]="rfqMaterial"
-                    (quantityAndMakes)="getQuantityAndMakes($event)"></app-rfq-quantity-makes>
+                <app-rfq-quantity-makes *ngIf="currentIndex===1" [stepperForm]="stpForm" [rfq]="rfqMaterial">
+                </app-rfq-quantity-makes>
             </mat-step>
             <mat-step>
                 <ng-template matStepLabel>Select Supplier</ng-template>
-                <app-rfq-supplier *ngIf="currentIndex===2" [stepperForm]="stpForm"
-                    [selectedMaterialsList]="updatedRfqMaterial"></app-rfq-supplier>
+                <app-rfq-supplier *ngIf="currentIndex===2" [stepperForm]="stpForm"></app-rfq-supplier>
             </mat-step>
         </mat-horizontal-stepper>
     </div>
