--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -1,24 +1,25 @@
 <form *ngIf="projectSelectedMaterials" [formGroup]="materialForms">
     <div class="row ">
-        <div class="col-xs-10 text-right p-t-10 border-input">
-            <mat-form-field class="input-search-padding-zero pull-right">
-                <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchText"
+        <div class="col-xs-12 text-right p-t-10 border-input">
+            <span class="p-r-20">
+                <mat-form-field class="input-search-padding-zero">
+                    <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject"
+                        [ngModelOptions]="{standalone: true}" />
+                    <button mat-button matSuffix mat-icon-button>
+                        <mat-icon>search</mat-icon>
+                    </button>
+                </mat-form-field>
+            </span>
+            <mat-form-field class="input-search-padding-zero">
+                <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial"
                     [ngModelOptions]="{standalone: true}" />
                 <button mat-button matSuffix mat-icon-button>
                     <mat-icon>search</mat-icon>
                 </button>
             </mat-form-field>
         </div>
-        <div class="col-xs-2 text-right p-b-10">
-            <span>
-                <button mat-raised-button [disabled]="!materialForms.valid" matStepperNext (click)="materialAdded()"
-                    class="main-background-color main-button color-white">
-                    Next
-                </button>
-            </span>
-        </div>
     </div>
-    <div *ngFor="let material of projectSelectedMaterials| SearchPipe: searchText:'projectName';let mati=index">
+    <div *ngFor="let material of projectSelectedMaterials| SearchPipe: searchProject:'projectName';let mati=index">
         <mat-accordion class="accordion-padding-zero" formArrayName="forms">
             <mat-expansion-panel [expanded]="true">
                 <mat-expansion-panel-header>
@@ -28,7 +29,8 @@
                             class="main-color p-l-15">{{material.defaultAddress.addressLine1}}</a>
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <table mat-table [dataSource]="material.projectMaterialList" class="mat-elevation-z8 col-sm-12">
+                <table mat-table [dataSource]="material.projectMaterialList | SearchPipe: searchMaterial:'materialName'"
+                    class="mat-elevation-z8 col-sm-12">
                     <ng-container matColumnDef="Material Name">
                         <th mat-header-cell *matHeaderCellDef>Material Name</th>
                         <td mat-cell *matCellDef="let element">
@@ -77,7 +79,6 @@
                             <app-chip
                                 (onUpdate)="makesUpdate($event, (i +  (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)))">
                             </app-chip>
-
                         </td>
                     </ng-container>
 
