--- a/src/app/features/bom/bom-preview/bom-preview.component.html
+++ b/src/app/features/bom/bom-preview/bom-preview.component.html
@@ -26,7 +26,7 @@
               <span class="pull-right">
                 <mat-form-field class="full-border widthZero">
                   <input matInput formControlName="estimatedQty" class="p-b-5 shortWidth" placeholder="eg. 1500" />
-                  <span class="p-b-15 p-l-5">MT</span>
+                  <span class="p-b-15 p-l-5">{{subcategory.materialUnit}}</span>
                 </mat-form-field>
               </span>
             </div>
@@ -39,7 +39,7 @@
                   <span class="pull-right">
                     <mat-form-field class="full-border widthZero">
                       <input matInput class="p-b-5 shortWidth" placeholder="eg. 1500" /><span
-                        class="p-b-15 p-l-5">MT</span>
+                        class="p-b-15 p-l-5">{{subcategory.materialUnit}}</span>
                     </mat-form-field>
                   </span>
                 </div>
