--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -1,11 +1,20 @@
 <div class="page-start-point">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent">
         <div class="row p-t-20 p-b-20">
-            <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div>
+            <!-- <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div> -->
+            <div class="col-xs-6"></div>
             <div class="col-xs-6">
+        
                 <button (click)="viewBack()" mat-raised-button class="background-white-color main-color main-button pull-right">
                     Back
                 </button>
+
+                  <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-10"
+                  (click)="addGRN()">
+                   Add GRN
+                </button>
+
+
             </div>
         </div>
 
