--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-xs-12">
 
-        <mat-card>
+        <!-- <mat-card>
           <div class="row">
             <div class="right-pipe" style="width: 20%;">
               <span class="p-l-30 p-r-20 pull-left">23</span>
@@ -27,7 +27,7 @@
               <span class="pull-left">Low Stock Material</span>
             </div>
           </div>
-        </mat-card>
+        </mat-card> -->
       </div>
     </div>
       <div class="row">
