--- a/src/app/shared/dialogs/add-address/address-dialog.html
+++ b/src/app/shared/dialogs/add-address/address-dialog.html
@@ -30,7 +30,7 @@
               </div>
               <div class="row border-input">
                 <mat-form-field class="col-xs-12 p-r-150 p-l-150">
-                  <input matInput type="number" placeholder="Pincode" formControlName="pinCode" />
+                  <input matInput type="text" placeholder="Pincode" formControlName="pinCode" />
                    <small
                     *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched"
                     class="error-msg"> pincode is required </small>
