--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -56,15 +56,15 @@
 
 
     <div class="rfq-list-detail-custom">
-      <mat-accordion>
+      <mat-accordion *ngIf="submittedRfqListTemp">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Bided RFQ
+              Submitted RFQ
             </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="row">
-            <table mat-table [dataSource]="openRfqList" class="mat-elevation-z8 col-sm-12">
+            <table mat-table [dataSource]="submittedRfqList" class="mat-elevation-z8 col-sm-12">
               <ng-container matColumnDef="RFQ Name">
                 <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
                 <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
@@ -151,15 +151,15 @@
         </mat-expansion-panel>
       </mat-accordion>
       <br>
-      <mat-accordion *ngIf="closeRfqListTemp">
+      <mat-accordion *ngIf="nonSubmittedRfqListTemp">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Non-Bided RFQ
+              Non-Submitted RFQ
             </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="row">
-            <table mat-table [dataSource]="closeRfqList" class="mat-elevation-z8 col-sm-12">
+            <table mat-table [dataSource]="nonSubmittedRfqList" class="mat-elevation-z8 col-sm-12">
               <ng-container matColumnDef="RFQ Name">
                 <th mat-header-cell *matHeaderCellDef>RFQ Name</th>
                 <td mat-cell *matCellDef="let element">{{ element.rfqName }}</td>
