--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -44,11 +44,11 @@
                             {{ element.dueDate }}
                         </td>
                     </ng-container>
-                    <ng-container matColumnDef="Requested Quantity">
+                    <ng-container matColumnDef="Requested Qty">
                         <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
                         <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
                     </ng-container>
-                    <ng-container matColumnDef="Estimated Quantity">
+                    <ng-container matColumnDef="Estimated Qty">
                         <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
                         <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
                     </ng-container>
