View-Rfq added for Non Submitted, add address supplier implemented, routing fixed! Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-after-bid/rfq-supplier-after-bid.component.html
@@ -7,7 +7,7 @@
           <img src="../../../../assets/images/orange-tick.png" alt="BuildSupply_Logo">
         </div>
          
-         <div class="bid-material">
+         <div class="bid-material" *ngIf="brandCount && materialCount">
            Bid Completion: <b>{{brandCount}} / {{materialCount}}</b>
          </div>
          <div class="thank-you">
