--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -230,13 +230,13 @@
               <ng-container matColumnDef="action1">
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
-                  hello
+                   <a [routerLink]="['../rfq-view', element.rfqId]">View RFQ</a>
                 </td>
               </ng-container>
               <ng-container matColumnDef="action2">
                 <mat-header-cell *matHeaderCellDef></mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                  hello
+                  <!-- <a [routerLink]="['../rfq-view', element.rfqId]">View Bids</a>-->
                 </mat-cell>
               </ng-container>
 
