--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -8,14 +8,14 @@
             </button>
         </mat-form-field>
 
-        <button class="main-background-color round-button full-border m-t-5 m-r-15"
+        <button class="main-background-color round-button full-border m-t-5 m-r-15 p-r-10"
             (click)="openDialog( this.rfqData.rfqProjectsList[0].projectId)">
             <mat-icon class="color-white m-t-5">add</mat-icon>
         </button>
-        <!-- <button mat-raised-button [disabled]="!selectedSupplierFlag" (click)="nevigateToUploadPage()"
-                        class="main-background-color main-button color-white">
-                        Next
-                    </button> -->
+        <!-- <button mat-raised-button [disabled]="!selectedSupplierFlag" (click)="navigateToUploadPage()"
+            class="main-background-color main-button color-white">
+            Next
+        </button> -->
     </div>
 </div>
 <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'"
@@ -24,7 +24,8 @@
     <ng-container matColumnDef="Supplier Name">
         <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
         <td mat-cell *matCellDef="let element">
-            <mat-checkbox (change)="valueChange(element)" [checked]="element.checked"></mat-checkbox>
+            <mat-checkbox [disabled]="selectedSuppliersList.length===3" (change)="valueChange(element)"
+                [checked]="element.checked"></mat-checkbox>
             {{ element.supplier_name }}
         </td>
     </ng-container>
